working in mobile
working in mobile

--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -33,6 +33,11 @@ code {
   height: 166px;
 }
 
+.header_mobile_box {
+  border-radius: 10px;
+  /* height: 166px; */
+}
+
 .project_line {
   border: none;
   height: 2px;
